# uni-game

./: .gitignore  CMakeLists.txt  README.md  settings.ini
docs/: Denis.docx  Stepan.docx
extra/: enemies.ini  player.ini  projectiles.ini  settings.ini  weapons.ini
resources/levels/: level.txt
resources/shaders/: my_shader copy.fs  my_shader.fs
resources/textures/: layout_name.c
saves/: level.txt
src/: main.cpp  todo.txt  рендер.txt
src/UI/: UI.cpp  background.cpp  scroll_menu.cpp
src/components/: collider.cpp  controls.cpp  keyboard.cpp  physics.cpp  renderer.cpp
src/game/: game.cpp  level.cpp
src/include/: ai.h  animation.h  audio.h  background.h  bar.h  boss.h  bosses.cpp  bosses.h  collider.h  controls.h  cool_camera.cpp  cool_camera.h  cppshader.h  enemy.h  entity.h  game.h  ini_file.h  keyboard.h  level.h  myshader.h  object.h  object_controller.h  particle.h  physics.h  player.h  projectile.h  raygui.h  renderer.h  scroll_menu.h  style_cyber.h  texture_atlas.h  texture_data.h  texture_state.h  tile.h  timer.h  ui.h  vec2.h  weapon.h
src/main/: main.cpp
src/miscellaneous/: animation.cpp  audio.cpp  ini_file.cpp  texture_atlas.cpp  texture_data.cpp  texture_state.cpp  timer.cpp  vec2.cpp
src/objects/: bosses.cpp  enemy.cpp  entity.cpp  object.cpp  particle.cpp  player.cpp  projectile.cpp  tile.cpp  weapon.cpp
src/player/: player.cpp
tests/: raygui.h  scroll_test.cpp
